// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/AsideLayout Aside Style Override 1`] = `
<div
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    className="psds-aside-layout psds-aside-layout--aside-position-first"
  >
    <div
      className="psds-aside-layout__aside psds-aside-layout__aside--aside-position-first"
      style={
        Object {
          "overflow": "hidden",
        }
      }
    >
      <div
        style={
          Object {
            "background": "red",
            "height": "50px",
            "width": "700px",
          }
        }
      >
        Fixed width thing, overflow hidden by aside override
      </div>
    </div>
    <div
      className="psds-aside-layout__main"
    >
      This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/AsideLayout Positions 1`] = `
<div
  style={
    Object {
      "color": "white",
      "padding": "64px",
    }
  }
>
  <div
    style={
      Object {
        "outline": "1px solid red",
      }
    }
  >
    <div
      className="psds-aside-layout psds-aside-layout--aside-position-first"
    >
      <div
        className="psds-aside-layout__aside psds-aside-layout__aside--aside-position-first"
      >
        This is ASIDE stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here.
      </div>
      <div
        className="psds-aside-layout__main"
      >
        This is MAIN stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "outline": "1px solid red",
      }
    }
  >
    <div
      className="psds-aside-layout psds-aside-layout--aside-position-last"
    >
      <div
        className="psds-aside-layout__aside psds-aside-layout__aside--aside-position-last"
      >
        This is ASIDE stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here.
      </div>
      <div
        className="psds-aside-layout__main"
      >
        This is MAIN stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/AsideLayout Short Aside Content 1`] = `
<div
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    className="psds-aside-layout psds-aside-layout--aside-position-first"
  >
    <div
      className="psds-aside-layout__aside psds-aside-layout__aside--aside-position-first"
    >
      Very short
    </div>
    <div
      className="psds-aside-layout__main"
    >
      This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/AsideLayout Short Main Content 1`] = `
<div
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    className="psds-aside-layout psds-aside-layout--aside-position-first"
  >
    <div
      className="psds-aside-layout__aside psds-aside-layout__aside--aside-position-first"
    >
      This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here. This is aside stuff that goes here.
    </div>
    <div
      className="psds-aside-layout__main"
    >
      Very little
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/AsideLayout Wide Fixed Aside Content 1`] = `
<div
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    className="psds-aside-layout psds-aside-layout--aside-position-first"
  >
    <div
      className="psds-aside-layout__aside psds-aside-layout__aside--aside-position-first"
    >
      <div
        style={
          Object {
            "background": "red",
            "height": "50px",
            "width": "700px",
          }
        }
      >
        Fixed width thing, overflows
      </div>
    </div>
    <div
      className="psds-aside-layout__main"
    >
      This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here. This is main stuff that goes here.
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/EqualColumnLayout Counts 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "64px",
    }
  }
>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      className="psds-equal-column-layout"
    >
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-2"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        (count: 
        two
        ) First child
      </div>
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-2"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Second child
      </div>
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-2"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Third child
      </div>
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-2"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Fourth child
      </div>
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-2"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Fifth child
      </div>
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-2"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Sixth child
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      className="psds-equal-column-layout"
    >
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-3"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        (count: 
        three
        ) First child
      </div>
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-3"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Second child
      </div>
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-3"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Third child
      </div>
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-3"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Fourth child
      </div>
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-3"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Fifth child
      </div>
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-3"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Sixth child
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      className="psds-equal-column-layout"
    >
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-4"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        (count: 
        four
        ) First child
      </div>
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-4"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Second child
      </div>
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-4"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Third child
      </div>
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-4"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Fourth child
      </div>
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-4"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Fifth child
      </div>
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-4"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Sixth child
      </div>
    </div>
  </div>
  <div
    style={
      Object {
        "color": "white",
      }
    }
  >
    <div
      className="psds-equal-column-layout"
    >
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-6"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        (count: 
        six
        ) First child
      </div>
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-6"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Second child
      </div>
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-6"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Third child
      </div>
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-6"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Fourth child
      </div>
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-6"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Fifth child
      </div>
      <div
        className="psds-equal-column-layout__column psds-equal-column-layout__column--count-6"
        style={
          Object {
            "background": "#E7558B",
          }
        }
      >
        Sixth child
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/EqualColumnLayout Custom Markup 1`] = `
<div
  style={
    Object {
      "color": "white",
    }
  }
>
  <ul
    className="psds-equal-column-layout"
    style={
      Object {
        "listStyle": "none",
      }
    }
  >
    <li
      className="psds-equal-column-layout__column psds-equal-column-layout__column--count-4"
    >
      Renders list... First child
    </li>
    <li
      className="psds-equal-column-layout__column psds-equal-column-layout__column--count-4"
    >
      Second child
    </li>
    <li
      className="psds-equal-column-layout__column psds-equal-column-layout__column--count-4"
    >
      Third child
    </li>
    <li
      className="psds-equal-column-layout__column psds-equal-column-layout__column--count-4"
    >
      Fourth child
    </li>
    <li
      className="psds-equal-column-layout__column psds-equal-column-layout__column--count-4"
    >
      Fifth child
    </li>
    <li
      className="psds-equal-column-layout__column psds-equal-column-layout__column--count-4"
    >
      Sixth child
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/PageHeadingLayout Default 1`] = `
<div
  className="psds-page-heading-layout"
>
  <div
    className="psds-page-heading-layout__heading"
  >
    <h2
      className="psds-text__heading psds-text__heading--size-large psds-text__heading--color-primary psds-theme--dark"
    >
      My Page
    </h2>
  </div>
  My content
</div>
`;

exports[`Storyshots Components/PageHeadingLayout Long Title 1`] = `
<div
  className="psds-page-heading-layout"
>
  <div
    className="psds-page-heading-layout__heading"
  >
    <h2
      className="psds-text__heading psds-text__heading--size-large psds-text__heading--color-primary psds-theme--dark"
    >
      My page is here and it's long. My page is here and it's long. My page is here and it's long. My page is here and it's long.
    </h2>
  </div>
  My content
</div>
`;

exports[`Storyshots Components/PageHeadingLayout Long Title With Actions 1`] = `
<div
  className="psds-page-heading-layout"
>
  <div
    className="psds-page-heading-layout__heading"
  >
    <h2
      className="psds-text__heading psds-text__heading--size-large psds-text__heading--color-primary psds-theme--dark"
    >
      My page is here and it's long. My page is here and it's long. My page is here and it's long. My page is here and it's long.
    </h2>
    <div
      className="psds-page-heading-layout__actions"
    >
      <button
        className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Wow, an action
        </span>
      </button>
      <a
        className="psds-link psds-link--appearance-default psds-theme--dark"
        href="https://duckduckgo.com"
      >
        A link
      </a>
    </div>
  </div>
  My content
</div>
`;

exports[`Storyshots Components/PageHeadingLayout Long Title With Lots Of Actions 1`] = `
<div
  className="psds-page-heading-layout"
>
  <div
    className="psds-page-heading-layout__heading"
  >
    <h2
      className="psds-text__heading psds-text__heading--size-large psds-text__heading--color-primary psds-theme--dark"
    >
      My page is here and it's long. My page is here and it's long. My page is here and it's long. My page is here and it's long.
    </h2>
    <div
      className="psds-page-heading-layout__actions"
    >
      <button
        className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Wow, an action
        </span>
      </button>
      <a
        className="psds-link psds-link--appearance-default psds-theme--dark"
        href="https://duckduckgo.com"
      >
        A link
      </a>
      <button
        className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Wow, an action
        </span>
      </button>
      <a
        className="psds-link psds-link--appearance-default psds-theme--dark"
        href="https://duckduckgo.com"
      >
        A link
      </a>
      <button
        className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Wow, an action
        </span>
      </button>
      <a
        className="psds-link psds-link--appearance-default psds-theme--dark"
        href="https://duckduckgo.com"
      >
        A link
      </a>
      <button
        className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Wow, an action
        </span>
      </button>
      <a
        className="psds-link psds-link--appearance-default psds-theme--dark"
        href="https://duckduckgo.com"
      >
        A link
      </a>
    </div>
  </div>
  My content
</div>
`;

exports[`Storyshots Components/PageHeadingLayout Lots Of Actions 1`] = `
<div
  className="psds-page-heading-layout"
>
  <div
    className="psds-page-heading-layout__heading"
  >
    <h2
      className="psds-text__heading psds-text__heading--size-large psds-text__heading--color-primary psds-theme--dark"
    >
      My Page
    </h2>
    <div
      className="psds-page-heading-layout__actions"
    >
      <button
        className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Wow, an action
        </span>
      </button>
      <a
        className="psds-link psds-link--appearance-default psds-theme--dark"
        href="https://duckduckgo.com"
      >
        A link
      </a>
      <button
        className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Wow, an action
        </span>
      </button>
      <a
        className="psds-link psds-link--appearance-default psds-theme--dark"
        href="https://duckduckgo.com"
      >
        A link
      </a>
      <button
        className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Wow, an action
        </span>
      </button>
      <a
        className="psds-link psds-link--appearance-default psds-theme--dark"
        href="https://duckduckgo.com"
      >
        A link
      </a>
      <button
        className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Wow, an action
        </span>
      </button>
      <a
        className="psds-link psds-link--appearance-default psds-theme--dark"
        href="https://duckduckgo.com"
      >
        A link
      </a>
    </div>
  </div>
  My content
</div>
`;

exports[`Storyshots Components/PageHeadingLayout With Actions 1`] = `
<div
  className="psds-page-heading-layout"
>
  <div
    className="psds-page-heading-layout__heading"
  >
    <h2
      className="psds-text__heading psds-text__heading--size-large psds-text__heading--color-primary psds-theme--dark"
    >
      My Page
    </h2>
    <div
      className="psds-page-heading-layout__actions"
    >
      <button
        className="psds-button psds-button--layout-inline psds-button--size-medium psds-button--appearance-primary psds-theme--dark"
        disabled={false}
      >
        <span
          aria-hidden={false}
          className="psds-button__text"
        >
          Wow, an action
        </span>
      </button>
      <a
        className="psds-link psds-link--appearance-default psds-theme--dark"
        href="https://duckduckgo.com"
      >
        A link
      </a>
    </div>
  </div>
  My content
</div>
`;

exports[`Storyshots Components/PageWidthLayout Default 1`] = `
<div
  className="psds-page-width-layout"
  style={
    Object {
      "color": "white",
      "outline": "1px solid red",
    }
  }
>
  My content
</div>
`;

exports[`Storyshots Components/PageWidthLayout Full Bleed 1`] = `
<div
  style={
    Object {
      "background": "rebeccapurple",
    }
  }
>
  <div
    className="psds-page-width-layout"
    style={
      Object {
        "color": "white",
        "outline": "1px solid red",
      }
    }
  >
    My content
  </div>
</div>
`;
